<resources>
    <string name="app_name">Formula Ace</string>
    <string name="registration">Register</string>
    <string name="Register">Register</string>
    <string name="LoginLabel"><u>You already have an account? Click here!</u></string>
    <string name="username">Enter your Username</string>
    <string name="user_email">Enter your email</string>
    <string name="password">Please enter a password</string>
    <string name="label1">Create new account</string>
    <string name="Login">Login</string>
    <string name="Login1">Login</string>
    <string name="RegisterLabel"><u>You dont have an account? Click here!</u></string>
    <string name="hello_blank_fragment">Welcome</string>
    <string name="title_activity_camera_activity">Camera_activity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_favorite">Favorite</string>
    <string name="user_name">Username</string>
    <string name="nav_inbox">inbox</string>
    <string name="nav_drafts">drafts</string>
    <string name="nav_sent">sent</string>
    <string name="nav_trash">trash</string>
    <string name="nav_support">support</string>
    <string name="nav_help">help</string>
    <string name="nav_feedback">feedback</string>
    <string name="nav_open_drawer">Open</string>
    <string name="nav_close_drawer">Close</string>
    <string name="nav_camara">Camera</string>
    <string name="nav_logout">Logout</string>
    <string name="action_camara">Camera</string>
    <string name="Leaderboard">LeaderBoard</string>
    <string name="nav_leaderboard">LeaderBoard</string>
    <string name="nav_drivers">Drivers</string>
    <string name="nav_account">Account</string>
    <string name="nav_stadiums">Stadiums</string>
    <string name="nav_teams">Teams</string>
    <string name="nav_circuits">Circuits</string>
    <string name="nav_question">Question</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="nav_schedules">Schedules</string>
    <string name="nav_home">Home</string>
    <string name="Circuit">Circuits</string>
    <string name="history">Question history</string>
    <string name="nav_history">History</string>
    <string name="Home">Welcome to Formula Ace where dreams are only dreams!</string>
    <string name="challenge">Answer the Challenge</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="total_questions">Total Questions:</string>
    <string name="correct_answers">Correct answers:</string>
    <string name="wrong_answers">Wrong answers:</string>
    <string name="name">Name</string>
    <string name="locality">Locality</string>
    <string name="country">Country</string>
    <string name="question_history">Question history</string>
    <string name="near_circuit">It appears you are near a circuit.</string>
    <string name="add_to_calendar">Add To Calendar</string>
    <string name="time">00:00:00</string>
    <string name="map">Map</string>
</resources>