<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_camera"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/nav_camara"/>
        <item
            android:id="@+id/nav_question"
            android:icon="@drawable/ic_question"
            android:title="@string/nav_question"/>
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_leaderboard"
            android:title="@string/nav_leaderboard"/>

        <item
            android:id="@+id/nav_drivers"
            android:icon="@drawable/ic_racing_helmet"
            android:title="@string/nav_drivers"/>
        <item
            android:id="@+id/nav_circuits"
            android:icon="@drawable/ic_go_kart_track"
            android:title="@string/nav_circuits"/>
        <item
            android:id="@+id/nav_teams"
            android:icon="@drawable/ic_account_group"
            android:title="@string/nav_teams"/>
        <item
            android:id="@+id/nav_schedules"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/nav_schedules"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_baseline_access_time_24"
            android:title="@string/nav_history"/>
    </group>

    <item android:title="@string/nav_account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_logout"/>
        </menu>
    </item>
</menu>
