<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:gravity="center_vertical"
        android:text="@string/Home"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="10dp">

            <ImageButton
                android:id="@+id/teams"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:background="@drawable/teams"
                android:contentDescription="@string/nav_teams" />

            <ImageButton
                android:id="@+id/circuits"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:background="@drawable/circuits"
                android:layout_marginStart="50dp"
                android:contentDescription="@string/Circuit" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp">

            <ImageButton
                android:id="@+id/schedule"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:background="@drawable/schedule"
                android:contentDescription="@string/nav_schedules" />

            <ImageButton
                android:id="@+id/drivers"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:background="@drawable/drivers"
                android:layout_marginStart="50dp"
                android:contentDescription="@string/nav_drivers" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:text="@string/near_circuit"
                android:textAlignment="center"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/challenge" />
        </LinearLayout>
        <Button
            android:id="@+id/btn2"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/add_to_calendar"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>