<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Label"
            android:layout_width="390dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/registration"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="390dp"
            android:layout_height="19dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/label1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nUsername"
            android:layout_width="390dp"
            android:layout_height="41dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="text"
            android:lines="1"
            android:rotationX="0"
            android:selectAllOnFocus="true"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:autofillHints="" />

        <EditText
            android:id="@+id/nEmail"
            android:layout_width="390dp"
            android:layout_height="41dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:selectAllOnFocus="true"
            android:textStyle="bold"
            android:autofillHints="" />

        <EditText
            android:id="@+id/nPassword"
            android:layout_width="390dp"
            android:layout_height="41dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lines="1"
            android:selectAllOnFocus="true"
            android:textStyle="bold"
            android:autofillHints="" />

        <Button
            android:id="@+id/nRegister"
            android:layout_width="390dp"
            android:layout_height="41dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/Register"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nLogin"
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/LoginLabel" />
    </LinearLayout>
</LinearLayout>